refactor: lod part 1